# mmdetection3d_ROS

./: CMakeLists.txt  README.md  package.xml  ros.py
launch/: pointpillars.launch  pointpillars.rviz  ros.py
scripts/: inference.py  kehuduan_test.py  pp_kitti-3d-3class.py  pp_ros.py  view_bin_type.py
srv/: detector.srv
tools/: ros.py
tools/checkpoint/cnntran448_epoch24/cnntran448_epoch24/: .results_nusc.json.baiduyun.uploading.cfg  second.py
